tests/parser/tests/cases/should_fail/malformed_function_type/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:20
1 |   str_eq: (str, str) > str;
  |                      ^ here
  = note: unexpectedly encountered a `>`.
  = help: consider adding a `;`
